<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScavengerHuntFragment1">

    <TextView
        android:id="@+id/scavenger_hunt_fragment_1_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scavenger_hunt_fragment_1_text_1"
        app:layout_constraintBottom_toTopOf="@+id/scavenger_hunt_fragment_1_button_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/scavenger_hunt_fragment_1_button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/scavenger_hunt_fragment_1_button_1"
        app:layout_constraintBottom_toTopOf="@+id/scavenger_hunt_fragment_1_button_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scavenger_hunt_fragment_1_text_1" />

    <Button
        android:id="@+id/scavenger_hunt_fragment_1_button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/scavenger_hunt_fragment_1_button_2"
        app:layout_constraintBottom_toTopOf="@+id/scavenger_hunt_fragment_1_button_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scavenger_hunt_fragment_1_button_1" />

    <Button
        android:id="@+id/scavenger_hunt_fragment_1_button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/scavenger_hunt_fragment_1_button_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scavenger_hunt_fragment_1_button_2" />

    <Button
        android:id="@+id/scavenger_hunt_fragment_1_button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />
</androidx.constraintlayout.widget.ConstraintLayout>